Case details page access security issue fix
SECURITY issues ( not in phase with the requirements and dangerous) :
- High : Token is part of the URL ... so a 3rd party can have access to the confidential information. Ex : https://wbcm-web.herokuapp.com/case/56ed21c1-1800-4bff-86e1-962bd6946adf/edit
- High : The token doesn't look different when you are a user and when your are an Admin . In the initial description it was mandatory to have 2 keys. This is a guaranty in term of non-repudiation. Without 2 (hidden) keys, the system is not relevant and is just a ticketing system.
- Medium : Admin access to a case is accessible without authentication when you have the URL (so possible to view or reply to a case without logon) . A case management requires authentication
https://wbcm-web.herokuapp.com/case/56ed21c1-1800-4bff-86e1-962bd6946adf/reply

--- a/src/app/components/user/user-add-edit-case/user-add-edit-case.component.css
+++ b/src/app/components/user/user-add-edit-case/user-add-edit-case.component.css
@@ -1,14 +1,3 @@
-.circle {
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  border-radius: 50%;
-  color: #fff;
-  text-align: center;
-  background: #000;
-  margin: auto;
-}
-
 .invalid-feedback {
   color: #FF8882;
 }
